# ensertainty

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
bash/: setup.sh
configs/: config.yaml  config_geodesic_inference.yaml  config_reconstructions_inference.yaml
configs/datamodule/: celeba.yaml  cifar10.yaml  cifar100.yaml  fmnist.yaml  imagenette.yaml  mnist.yaml  mnist_2class.yaml  mnist_3class.yaml  mnist_5class.yaml
configs/decoder/: basic_conv.yaml  basic_dense.yaml  celeba.yaml
configs/encoder/: basic_conv.yaml  basic_dense.yaml  celeba.yaml
configs/grad_clipping/: block_rms.yaml  global_norm.yaml  value.yaml
configs/inference/: ensemble_geodesics.yaml  ensemble_geodesics_fmnist_2d.yaml  ensemble_geodesics_fmnist_50d.yaml  ensemble_geodesics_mnist3class_2d.yaml  ensemble_geodesics_mnist_2d.yaml  ensemble_geodesics_mnist_50d.yaml  rbf_geodesics.yaml  rbf_geodesics_fmnist_2d.yaml  rbf_geodesics_fmnist_50d.yaml  rbf_geodesics_mnist3class_2d.yaml  rbf_geodesics_mnist_2d.yaml  rbf_geodesics_mnist_50d.yaml  reconstructions.yaml
configs/logging/: wandb.yaml
configs/loss/: cross_entropy_own.yaml  l2loss.yaml  sigmoid_binary_cross_entropy.yaml  softmax_cross_entropy.yaml
configs/model/: ensemble_vae.yaml  rbf_vae.yaml
configs/optimizer/: adam.yaml  adamw.yaml  sgd.yaml
configs/scheduler/: constant.yaml  piecewise_constant.yaml  sgdr.yaml  warm_cosine_decay.yaml
configs/training/: resume.yaml  train.yaml
scripts/: checkpoints.py  inference_geodesics.py  inference_reconstructions.py  train.py  whetever.py
(+21 files in other folders)
