[metadata]
name = ensertainty   
version = 0.0.1
author = Stas Syrota
author_email = mustas@pm.me
url = 'https://github.com/mustass/ensertainty'
description = "Uncertainty via decoder ensembling."
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
project_urls = 
    Bug Tracker = https://github.com/mustass/ensertainty/issues


[options]
packages = find:
python_requires = >= 3.11

[options.packages.find]
where = src

[flake8]
ignore = E203, E501, E741, W503, W605, E266
max-line-length = 88
per-file-ignores = __init__.py:F401,F403